# API-Project

./: API-Project Notes.md  README.md  graphql_demo.py  graphql_demo_queries.txt  pyproject.toml  rest_demo_queries.txt
restapi-graphql-project/: graphql_api.py  graphql_models.py  graphql_schema.py
stock_api/: graphql_models.py  graphql_schema.py  rest_api.py
